[SS] move clipart to separate directory

--- a/sam-solutions/01_Intro_to_linux.tex
+++ b/sam-solutions/01_Intro_to_linux.tex
@@ -31,7 +31,7 @@
 % картинки : круговая, и прямоугольная
 \begin{frame}
   \frametitle{Архитектура классических Unix}
-    \includegraphics[height=8cm]{classic-unix-arch}
+    \includegraphics[height=8cm]{clipart/classic-unix-arch}
 \end{frame}
 
 
@@ -39,7 +39,7 @@
   \frametitle{Архитектура Linux - 2}
 
   \begin{center}
-    \includegraphics[height=7cm]{linux-software-stack}
+    \includegraphics[height=7cm]{clipart/linux-software-stack}
   \end{center}
 \end{frame}
 
