--- a/sam-solutions/linux-qa-common.tex
+++ b/sam-solutions/linux-qa-common.tex
@@ -26,6 +26,6 @@
 
 \subject{Linux QA training}
 
-\pgfdeclareimage[height=1.5cm]{sam-solutions-logo}{sam-solutions-elinux}
+\pgfdeclareimage[height=1.5cm]{sam-solutions-logo}{clipart/sam-solutions-elinux}
 
 \logo{\pgfuseimage{sam-solutions-logo}}
