--- a/sam-solutions/linux-qa-common.tex
+++ b/sam-solutions/linux-qa-common.tex
@@ -29,3 +29,5 @@
 \pgfdeclareimage[height=1.5cm]{sam-solutions-logo}{clipart/sam-solutions-elinux}
 
 \logo{\pgfuseimage{sam-solutions-logo}}
+
+\graphicspath{{./clipart/}}
