--- a/sam-solutions/01_Intro_to_linux.tex
+++ b/sam-solutions/01_Intro_to_linux.tex
@@ -252,7 +252,8 @@
     \item \Large{ps} - список процессов \pause
     \item \Large{top} - процессы в динамике \pause
     \item \Large{uptime} - время, срок работы, параметры нагрузки \pause
-    \item \Large{last} - список логинившихся пользователей 
+    \item \Large{last} - список логинившихся пользователей \pause
+    \item \Large{uname -a} - информация о ядре и архитектуре
   \end{itemize}
 \end{frame}
 
