[SS] add ssh session automotion slide

--- a/sam-solutions/01_Intro_to_linux.tex
+++ b/sam-solutions/01_Intro_to_linux.tex
@@ -203,6 +203,17 @@
 
 \end{frame}
 
+\begin{frame}
+  \frametitle{SSH. Автоматизация входа}
+  \begin{center}
+    \begin{tabular}{ l r }
+      \Large{Linux: .ssh/config} & \Large{Windows: PuTTY session} \\
+      \lstinputlisting[basicstyle=\tiny]{samples/ssh-config} & \fbox{\includegraphics[height=4.5cm]{putty-config-screenshot}} \\
+    \end{tabular}
+
+  \end{center}
+\end{frame}
+
 \subsection{Unix shell}
 \begin{frame}
   \frametitle{Лирическое отступление: David Korn}
