--- a/sam-solutions/linux-qa-common.tex
+++ b/sam-solutions/linux-qa-common.tex
@@ -14,6 +14,7 @@
 \usepackage[TS1,T2A]{fontenc}
 \usepackage[english,russian]{babel}
 \usepackage{times}
+\usepackage{listings}
 
 \author[Author, Vlad Shakhov]{Влад 'mend0za' Шахов\\Linux \& Embedded Team Leader}
 
