[SS] add missed info for scripts run, some formatting

--- a/sam-solutions/01_Intro_to_linux.tex
+++ b/sam-solutions/01_Intro_to_linux.tex
@@ -268,13 +268,14 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
+\begin{frame}[fragile]
   \frametitle{Встроенная документация}
   \begin{itemize}
-    \item \Large{man} - встроенная справка. Команды ``man'', ``apropos'', ``whatis'' \pause
-    \item info - GNU texinfo, система гипертекстовой справки \pause
-    \item /usr/share/doc/* - документация, устанавливаемая вместе с программами \pause
-    \item Google - no comments \pause
+    \item \Large{\alert{man}} - встроенная справка. Команды ``man'', ``apropos'', ``whatis''
+      \newline Формат: \alert{page(номер раздела)}:  \verb+login(1)+\pause
+    \item \alert{info - GNU texinfo}, система гипертекстовой справки \pause
+    \item \alert{/usr/share/doc/*} - документация, устанавливаемая вместе с программами \pause
+    \item \alert{Google} - no comments \pause
   \end{itemize}
 
 \end{frame}
